samples/_failures_safe/1761434700_c98d06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ac7d6a4.c: In function ‘main’:
./samples/SAFE/__tmp_1ac7d6a4.c:163:16: error: missing terminating " character
  163 |         printf("Stack creation failed\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1ac7d6a4.c:163:9: error: expected expression at end of input
  163 |         printf("Stack creation failed\n
      |         ^~~~~~
./samples/SAFE/__tmp_1ac7d6a4.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1ac7d6a4.c:163:9: error: expected declaration or statement at end of input
